# rules_yq

./: MODULE.bazel  extensions.bzl
.github/workflows/: release.yml  release_prep.sh
yq/: BUILD.bazel  toolchain.bzl
