filegroup(
    name = "all",
    srcs = glob(["*"]),
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "replace.v3.bash",
        "replace.v4.bash",
    ],
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "docs",
    input = "//yq:def.bzl",
    out = "README.md",
    format = "markdown",
)
